--- a/src/MemoCard.css
+++ b/src/MemoCard.css
@@ -1,17 +1,9 @@
 .memo-card {
   width: 100%;
   height: 100%;
-  padding: 1vw;
+  padding: 8px;
 }
 
-.col {
-  padding: min(0.5vh, 0.5vw);
-}
-
-.col-first {
-  padding-left: min(1vh, 1vw);
-  padding-right: min(0.5vh, 0.5vw);
-}
 .memo-card .react-card-flip {
   height: 100%;
   width: 100%;
@@ -28,7 +20,7 @@
 }
 
 .memo-card-back {
-  font-size: 2.5vh;
+  font-size: min(2.5vw, 2.5vh, 24px);
   display: flex;
   justify-content: center;
   align-items: center;
